Fix typos in games section description

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <section id="games" class="section-lower" aria-labelledby="games-heading">
       <div class="container">
         <h2 id="games-heading">Our games</h2>
-        <p class="section-lead">A complete collection of our games... I know it's not much, but hopfully there will be more comeing soon</p>
+        <p class="section-lead">A complete collection of our games... I know it's not much, but hopefully there will be more coming soon</p>
 
         <div class="grid">
           <article class="tile" tabindex="0">
