Update feature headings and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@
 
     <section id="features" class="section-lower" aria-labelledby="features-heading">
       <div class="container">
-        <h2 id="features-heading">Why players love it</h2>
+        <h2 id="features-heading">Why we love it</h2>
         <div class="features-grid">
           <div class="feature">
-            <h4>Micro sessions</h4>
-            <p>Games that respect your time — play a round in under 3 minutes.</p>
+            <h4>Tested and Loved</h4>
+            <p>Each game has been tested by me and my people</p>
           </div>
           <div class="feature">
-            <h4>Curated library</h4>
-            <p>Hand-picked titles that focus on fun and polish.</p>
+            <h4>Personalized Writing</h4>
+            <p>Rules, cards and explanations made to feel like we're really talking to you</p>
           </div>
           <div class="feature">
             <h4>Instant play</h4>
-            <p>Start immediately — no long downloads required for demos.</p>
+            <p>Start immediately — no long set up.</p>
           </div>
         </div>
       </div>
