Change brand name from 'YourBrand' to 'Ben'

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <a class="logo" href="#" aria-label="YourBrand home">YourBrand</a>
+      <a class="logo" href="#" aria-label="YourBrand home">Ben</a>
       <nav class="main-nav" role="navigation" aria-label="Main navigation">
         <a href="#intro">Home</a>
         <a href="#games">Games</a>
@@ -113,7 +113,7 @@
     <section id="intro" class="hero" aria-labelledby="hero-heading">
       <div class="container hero-inner">
         <div class="hero-left">
-          <h1 id="hero-heading" class="hero-title">Play. Swipe. Win.</h1>
+          <h1 id="hero-heading" class="hero-title">CARDISTS</h1>
           <p class="hero-sub">Discover home-made card games with short sessions and big fun. Fast to try. Easy to love.</p>
           <div class="ctas">
             <a class="btn primary" href="#games">Explore Games</a>
