--- a/index.html
+++ b/index.html
@@ -221,8 +221,11 @@
       <div class="detail-inner">
         <h2 id="ensnap-hed" class="detail-hed">Ensnapifacation</h2>
         <p class="detail-copy">
-          Ensnapifacation is a playful card game full of surprises. Players take turns drawing challenge cards and must react quickly — bluffing and laughter encouraged.
-        </p>
+          Welcome to Ensnapifacation.
+Ensnapifacation is a fast, loud card game built on organized chaos. Cards flip, piles collide, patterns appear, and everyone is watching for something different. The structure keeps the game moving — the chaos is what fills it.
+The rules aren’t here to be memorized. They’re here to give the chaos shape. If something feels too complex, remove rules until it clicks. If something feels unfair, argue it out. Most moments are decided by the table, not the rulebook.
+You’ll win by noticing things early, committing without hesitation, and backing your call when it’s questioned. Hesitation loses. Confidence counts.
+Rules are flexible. Chaos isn’t.        </p>
         <p class="detail-copy">
           How to play (short): each round, one player reads a prompt, others respond with a card. The reader picks the funniest or best match. Rounds are quick and perfect for parties.
         </p>
