--- a/index.html
+++ b/index.html
@@ -228,7 +228,49 @@ The rules aren’t here to be memorized. They’re here to give the chaos shape.
 You’ll win by noticing things early, committing without hesitation, and backing your call when it’s questioned. Hesitation loses. Confidence counts.
 Rules are flexible. Chaos isn’t.        </p>
         <p class="detail-copy">
-          How to play (short): each round, one player reads a prompt, others respond with a card. The reader picks the funniest or best match. Rounds are quick and perfect for parties.
+          30 Second Teach:
+          <br>
+This is basically Snap, but more intense.
+          <br> <br>
+Everyone starts with a face-down draw pile and a hand of 5 cards.
+          <br>
+Everyone gets a face down draw pile
+          <br>
+Each player has a discard/snap pile separate from their hand and draw pile
+          <br>
+Each round has three phases.
+          <br> <br>
+Action Phase:
+          <br>
+On your turn, draw your hand to five cards from your draw pile. You can play up to two cards from your hand to mess with people.
+          <br>
+If you play none, you discard 3 from your draw pile.
+          <br>
+Play one, discard 1 from your draw pile.
+          <br>
+Play two, discard nothing.
+          <br> <br>
+Snap Phase:
+          <br>
+Everyone flips their top card from their draw pile into their discard/snap pile at the same time.
+          <br>
+If two match, shout SNAP and slap each hand on the 2 matching piles you see — you steal the top 5 cards from the piles you snapped before anyone else (your hand is fully on the pile).
+Goldens match anything.
+          <br> 
+You can also shout PATTERN if the numbers make a sequence — everyone votes on it.
+          <br> <br>
+Keep Phase:
+          <br>
+Keep one card for the next round, shuffle the rest back into your draw pile.
+          <br>
+The last player with cards — or biggest pile — wins.
+          <br>
+Arguing is allowed.
+          <br> <br>
+Goal:
+     <br>     
+Be the last one standing, or have the biggest pile of cards by winning Snap rounds when you decide to finish
+
         </p>
         <p><a href="#games" class="btn ghost">Back to games</a></p>
       </div>
