Revise Qazacatism game description and rules
Updated the description of the Qazacatism game with detailed gameplay instructions and rules.

--- a/index.html
+++ b/index.html
@@ -280,10 +280,31 @@ Be the last one standing, or have the biggest pile of cards by winning Snap roun
       <div class="detail-inner">
         <h2 id="qaza-hed" class="detail-hed">Qazacatism</h2>
         <p class="detail-copy">
-          Qazacatism is a quirky family-friendly card game created to spark conversation and silly debates. Expect strange scenarios, creative solutions, and lots of laughs.
+Someone’s close.
+          <br>
+Everyone notices.
+          <br>
+Everything goes wrong.
+          <br> <br>
+QAZACATISM is a chaotic card game where winning paints a target on your back.
+Cancel, reverse, interrupt, and survive long enough to finish your setup.
+If it feels unfair, it probably is.
         </p>
         <p class="detail-copy">
-          Quick overview: Players draw scenario cards and secretly choose a response. Votes are cast and the highest-voted answers win points. Simple setup, big replayability.
+30 SECOND TEACH
+          <br> <br>
+GOAL
+          <br>
+Be the first player to activate the Super Qaz by having both Super Qaz and Super Fish. When you play those 2 cards on your turn, you win instantly. 
+TURN
+          <br>
+On your turn, you may play up to 3 cards. When you’re done, draw back up to 7 cards. If you ever run out of cards, draw 7 new ones.
+CARDS
+          <br>
+Most cards mess with hands, steal information, reshuffle the game, or knock players out. Some cards activate immediately when drawn. Hunters are dangerous — unless you’re saved by a Qaz. Super cards ignore most rules.
+INTERRUPTS
+          <br>
+If you pick up a Thermal Hunter while you have a Super Qaz or a Super Fish, then everyone puts their hand back in the deck, shuffles it, and draws 7 new ones
         </p>
         <p><a href="#games" class="btn ghost">Back to games</a></p>
       </div>
