--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- This head block sets the page title, description, fonts and includes the page CSS.
+       (Simple: tells the browser about the page and loads the font.) -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cardists</title>
@@ -8,6 +10,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
+    /* This CSS block sets colors, fonts and layout for the whole site.
+       (Simple: controls how everything looks and responds.) */
+
     :root{
       --bg: #071122;
       --card-bg: rgba(255,255,255,0.02);
@@ -20,9 +25,6 @@
       color: #e8f0ff;
     }
 
-    /* smooth scrolling for in-page links */
-    html { scroll-behavior: smooth; }
-
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;background:linear-gradient(180deg,#05121b 0%,var(--bg) 100%);-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
     .container{max-width:var(--container);margin:0 auto;padding:1rem}
@@ -32,7 +34,7 @@
     .logo{font-weight:800;letter-spacing:0.6px;font-size:1.05rem;text-decoration:none}
     .main-nav a{margin-left:1rem;color:var(--muted);text-decoration:none;font-size:.95rem}
 
-    /* HERO */
+    /* HERO (the Home section) - layout & typography */
     .hero{min-height:78vh;display:flex;align-items:center}
     .hero-inner{display:flex;gap:2.5rem;align-items:center}
     .hero-left{flex:1;max-width:620px}
@@ -45,7 +47,7 @@
     .kpis{display:flex;gap:1.25rem;margin-top:1.5rem;list-style:none;padding:0;color:var(--muted)}
     .kpis li{font-weight:600}
 
-    /* CARDS */
+    /* CARDS - stacked game cards in the hero */
     .hero-right{flex:1;display:flex;justify-content:center;align-items:center;position:relative}
     .cards{width:360px;height:480px;position:relative;perspective:1400px}
     .card-link{display:block;color:inherit;text-decoration:none;cursor:pointer}
@@ -62,7 +64,7 @@
 
     .bg-shape{position:absolute;inset:0;pointer-events:none;opacity:.85;transform:translateY(22%);z-index:1}
 
-    /* LOWER SECTIONS */
+    /* LOWER SECTIONS - general spacing and grid */
     .section-lower{padding:4.5rem 0;border-top:1px solid rgba(255,255,255,0.02)}
     .section-lead{color:var(--muted);margin-top:.5rem}
     .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1.1rem;margin-top:1.5rem}
@@ -71,12 +73,12 @@
     .tile h3{margin:.2rem 0 .35rem}
     .tile-meta{font-size:.85rem;color:var(--muted)}
 
-    /* features */
+    /* features (cards that explain why you like the games) */
     .features-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-top:1rem}
     .feature{background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);padding:1.15rem;border-radius:10px;box-shadow:0 6px 20px rgba(0,0,0,0.45)}
     .feature h4{margin:0 0 .4rem}
 
-    /* contact form */
+    /* contact form styles */
     .contact-form{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:.75rem;margin-top:1rem}
     .contact-form input,.contact-form textarea{width:100%;padding:.8rem;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit}
     .muted{color:var(--muted);font-size:.9rem}
@@ -88,48 +90,88 @@
     /* utilities */
     .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
 
-    /* Bright, more saturated section backgrounds (improved contrast) */
-    .bg-blue{
-      background: linear-gradient(180deg,#2a98ff 0%, #1b7be6 100%);
-      color: #fff;
-    }
+    /* --------------------------
+       Bright section colors
+       --------------------------
+       These define the bright backgrounds used on some sections.
+       (Simple: make the section backgrounds bright so the text is easy to read.)
+    */
     .bg-green{
-      background: linear-gradient(180deg,#34d399 0%, #10b981 100%);
-      color: #07220a;
-    }
-    .bg-yellow{
-      background: linear-gradient(180deg,#ffdd57 0%, #ffcc00 100%);
-      color: #05201a;
+      /* bright green background for Home (intro) as requested */
+      background: linear-gradient(180deg,#8ef0a0 0%, #34d399 100%);
+      color: #000; /* make text black in green section */
     }
 
-    /* make tiles/features slightly transparent so section color shows but keep readable */
+    .bg-dark{
+      /* dark background used for Features after swapping */
+      background: linear-gradient(180deg,#05121b 0%, #071122 100%);
+      color: #e8f0ff; /* white-ish text on dark background */
+    }
+
+    .bg-blue{
+      /* brighter blue for Games / Contact if used */
+      background: linear-gradient(180deg,#7ec8ff 0%, #2a98ff 100%);
+      color: #000; /* black text on bright blue */
+    }
+
+    .bg-yellow{
+      background: linear-gradient(180deg,#fffb8f 0%, #ffdd57 100%);
+      color: #000;
+    }
+
+    /* make tiles/features slightly translucent so section color shows but keep readable */
     .bg-blue .tile,
     .bg-green .tile,
     .bg-yellow .tile,
     .bg-blue .feature,
     .bg-green .feature,
     .bg-yellow .feature {
-      background: rgba(255,255,255,0.06);
+      background: rgba(255,255,255,0.08);
       color: inherit;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.12);
     }
 
-    /* detail section */
+    /* detail section (per-card detail pages on the same page) */
     .section-detail{padding:5rem 0 3rem;border-top:1px solid rgba(255,255,255,0.02)}
     .detail-inner{max-width:900px;margin:0 auto;padding:0 1rem}
     .detail-hed{font-size:2rem;margin:0 0 .6rem}
     .detail-copy{font-size:1rem;line-height:1.6;color:inherit}
 
-    /* Make Ensnapifacation copy black for contrast (as requested) */
+    /* Keep Ensnapifacation text black as you asked previously */
     #game-ensnapifacation,
     #game-ensnapifacation .detail-hed,
     #game-ensnapifacation .detail-copy {
       color: #000 !important;
     }
 
-    /* Ensure headings in yellow sections are dark enough */
-    .bg-yellow .detail-hed { color: #111; }
-    .bg-yellow .detail-copy { color: #111; }
+    /* --------------------------
+       Section-specific text color rules
+       --------------------------
+       (Simple: ensures the Games and Home text colors are black as requested,
+        and the Features section uses the darker theme after swapping.)
+    */
+    /* Make all text in the Games section black for readability */
+    #games,
+    #games .section-lead,
+    #games .tile,
+    #games .tile h3,
+    #games .tile-meta {
+      color: #000 !important;
+    }
+
+    /* Force hero elements to show black text inside bg-green (Home) */
+    .bg-green .hero-title { color: #000 !important; }
+    .bg-green .hero-sub   { color: #0b2b13 !important; } /* darker greenish text */
+    .bg-green .kpis        { color: #0b2b13 !important; }
+    .bg-green .kpis li     { color: #0b2b13 !important; }
+
+    /* Ensure features section uses the dark theme (white text) */
+    .bg-dark .feature,
+    .bg-dark .feature h4,
+    .bg-dark .detail-copy,
+    .bg-dark .detail-hed {
+      color: #e8f0ff;
+    }
 
     @media(max-width:980px){
       .hero-inner{flex-direction:column-reverse;gap:2rem}
@@ -146,6 +188,8 @@
   </style>
 </head>
 <body>
+  <!-- This header block shows the top navigation and logo.
+       (Simple: site header with links to sections.) -->
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="logo" href="#" aria-label="YourBrand home">Ben</a>
@@ -159,7 +203,9 @@
   </header>
 
   <main>
-    <section id="intro" class="hero" aria-labelledby="hero-heading">
+    <!-- Intro / Home section
+         (Simple: main hero. I added the bright green background here and set text black.) -->
+    <section id="intro" class="hero bg-green" aria-labelledby="hero-heading">
       <div class="container hero-inner">
         <div class="hero-left">
           <h1 id="hero-heading" class="hero-title">CARDISTS</h1>
@@ -175,6 +221,7 @@
           </ul>
         </div>
 
+        <!-- Cards / clickable links -->
         <div class="hero-right" aria-hidden="true">
           <div class="cards" id="cards">
             <!-- wrap cards in anchors so clicking jumps to the detail sections -->
@@ -212,6 +259,8 @@
       </div>
     </section>
 
+    <!-- Games section
+         (Simple: lists the playable games. Text here is forced to black for readability.) -->
     <section id="games" class="section-lower bg-blue" aria-labelledby="games-heading">
       <div class="container">
         <h2 id="games-heading">Our games</h2>
@@ -238,63 +287,19 @@
       </div>
     </section>
 
-    <!-- Game detail sections (each card goes to its own section) -->
+    <!-- Game detail sections (each card goes to its own section)
+         (Simple: long-form details for each game on the same page.) -->
     <section id="game-ensnapifacation" class="section-detail bg-yellow" aria-labelledby="ensnap-hed">
       <div class="detail-inner">
         <h2 id="ensnap-hed" class="detail-hed">Ensnapifacation</h2>
         <p class="detail-copy">
-Welcome to Ensnapifacation.
-          <br>
-Ensnapifacation is a fast, loud card game built on organized chaos. Cards flip, piles collide, patterns appear, and everyone is watching for something different. The structure keeps the game moving — the chaos is what fills it.
-The rules aren’t here to be memorized. They’re here to give the chaos shape. If something feels too complex, remove rules until it clicks. If something feels unfair, argue it out. Most moments are decided by the table, not the rulebook.
-You’ll win by noticing things early, committing without hesitation, and backing your call when it’s questioned. Hesitation loses. Confidence counts.
-          <br>
-          Rules are flexible. Chaos isn’t.
-          <br> <br> 
-          30-Second Teach
-          <br> <br> 
-This is basically Snap, but more intense.
-          <br> <br>
-Everyone starts with a face-down draw pile and a hand of 5 cards.
-          <br>
-Everyone gets a face down draw pile
-          <br>
-Each player has a discard/snap pile separate from their hand and draw pile
-          <br>
-Each round has three phases.
-          <br> <br>
-Action Phase:
-          <br>
-On your turn, draw your hand to five cards from your draw pile. You can play up to two cards from your hand to mess with people.
-          <br>
-If you play none, you discard 3 from your draw pile.
-          <br>
-Play one, discard 1 from your draw pile.
-          <br>
-Play two, discard nothing.
-          <br> <br>
-Snap Phase:
-          <br>
-Everyone flips their top card from their draw pile into their discard/snap pile at the same time.
-          <br>
-If two match, shout SNAP and slap each hand on the 2 matching piles you see — you steal the top 5 cards from the piles you snapped before anyone else (your hand is fully on the pile).
-          <br>
-Goldens match anything.
-          <br> <br>
-You can also shout PATTERN if the numbers make a sequence — everyone votes on it.
-          <br> <br>
-Keep Phase:
-          <br>
-Keep one card for the next round, shuffle the rest back into your draw pile.
-          <br>
-The last player with cards — or biggest pile — wins.
-          <br> <br>
-Arguing is allowed.
-          <br> <br>
-Goal:
-          <br>
-Be the last one standing, or have the biggest pile of cards by winning Snap rounds when you decide to finish
-
+          Ensnapifacation is a playful card game full of surprises. Players take turns drawing challenge cards and must react quickly — bluffing and laughter encouraged.
+        </p>
+        <p class="detail-copy">
+          How to play (short): each round, one player reads a prompt, others respond with a card. The reader picks the funniest or best match. Rounds are quick and perfect for parties.
+        </p>
+        <p class="detail-copy">
+          (Longer details) This paragraph can be as long as you like — the yellow background will now stay consistent and readable. Because you asked, the text in this Ensnapifacation section is black for better contrast on the bright yellow background.
         </p>
         <p><a href="#games" class="btn ghost">Back to games</a></p>
       </div>
@@ -302,42 +307,23 @@ Be the last one standing, or have the biggest pile of cards by winning Snap roun
 
     <section id="game-qazacatism" class="section-detail bg-green" aria-labelledby="qaza-hed">
       <div class="detail-inner">
-        <h2 id="qaza-hed" class="detail-hed">Qazacatism</h2>  
-       <p class="detail-copy">
-Someone’s close.
-         <br>
-Everyone notices.
-         <br>
-Everything goes wrong.
-         <br> <br>
-QAZACATISM is a chaotic card game where winning paints a target on your back.
-Cancel, reverse, interrupt, and survive long enough to finish your setup.
-If it feels unfair, it probably is.
-         <br> <br> 
-         30 SECOND TEACH
-         <br> <br> 
-GOAL
-         <br> 
-Be the first player to activate the Super Qaz by having both Super Qaz and Super Fish. When you play those 2 cards on your turn, you win instantly. 
-         <br> <br> 
-TURN
-         <br> 
-On your turn, you may play up to 3 cards. When you’re done, draw back up to 7 cards. If you ever run out of cards, draw 7 new ones.
-<br>  <br> 
-         CARDS
-         <br> 
-Most cards mess with hands, steal information, reshuffle the game, or knock players out. Some cards activate immediately when drawn. Hunters are dangerous — unless you’re saved by a Qaz. Super cards ignore most rules.
-<br> <br> 
-         INTERRUPTS
-         <br> 
-If you pick up a Thermal Hunter while you have a Super Qaz or a Super Fish, then everyone puts their hand back in the deck, shuffles it, and draws 7 new ones
-
+        <h2 id="qaza-hed" class="detail-hed">Qazacatism</h2>
+        <p class="detail-copy">
+          Qazacatism is a quirky family-friendly card game created to spark conversation and silly debates. Expect strange scenarios, creative solutions, and lots of laughs.
+        </p>
+        <p class="detail-copy">
+          Quick overview: Players draw scenario cards and secretly choose a response. Votes are cast and the highest-voted answers win points. Simple setup, big replayability.
+        </p>
+        <p class="detail-copy">
+          (Longer details) Add as much text here as needed — the green section uses a brighter green background and dark text for readability.
         </p>
         <p><a href="#games" class="btn ghost">Back to games</a></p>
       </div>
     </section>
 
-    <section id="features" class="section-lower bg-green" aria-labelledby="features-heading">
+    <!-- Features section
+         (Simple: explains why you like these games. I swapped this to a darker background as requested.) -->
+    <section id="features" class="section-lower bg-dark" aria-labelledby="features-heading">
       <div class="container">
         <h2 id="features-heading">Why we love it</h2>
         <div class="features-grid">
@@ -357,6 +343,7 @@ If you pick up a Thermal Hunter while you have a Super Qaz or a Super Fish, then
       </div>
     </section>
 
+    <!-- Contact section (keeps a bright blue background) -->
     <section id="contact" class="section-lower bg-blue" aria-labelledby="contact-heading">
       <div class="container">
         <h2 id="contact-heading">Get in touch</h2>
@@ -384,6 +371,7 @@ If you pick up a Thermal Hunter while you have a Super Qaz or a Super Fish, then
     </section>
   </main>
 
+  <!-- Footer block: site footer and small links -->
   <footer class="site-footer" role="contentinfo">
     <div class="container footer-inner">
       <small>© <span id="year"></span> YourBrand — Built with care</small>
@@ -394,15 +382,18 @@ If you pick up a Thermal Hunter while you have a Super Qaz or a Super Fish, then
     </div>
   </footer>
 
-  <!-- GSAP & ScrollTrigger -->
+  <!-- Scripts: GSAP drives animations and ScrollTrigger handles scroll-based reveals.
+       (Simple: this makes the cards float and elements animate on scroll.) -->
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <script>
-    // small helper
+    // small helper: sets the year in the footer
     document.getElementById('year').textContent = new Date().getFullYear();
 
     // Wait for fonts & layout to settle
     (function(){
+      // This script runs the entrance animations and scroll reveals.
+      // (Simple: makes headings and cards slide/fade in, and makes cards float.)
       if (typeof gsap === 'undefined') return;
       gsap.registerPlugin(ScrollTrigger);
 
