--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <!-- tiles also link to details -->
           <a class="card-link" href="#game-ensnapifacation">
             <article class="tile" tabindex="0">
-              <div class="tile-art" style="background-image:url('resources/Back.png');background-size:cover;background-position:center"></div>
+              <div class="tile-art" style="background-image:url('resources/Ensnapifacation.png');background-size:cover;background-position:center"></div>
               <h3>Ensnapifacation</h3>
               <p class="tile-meta">Card game • 15min</p>
             </article>
@@ -276,7 +276,7 @@
 
           <a class="card-link" href="#game-qazacatism">
             <article class="tile" tabindex="0">
-              <div class="tile-art" style="background-image:url('resources/qazacatism-cover.png');background-size:cover;background-position:center"></div>
+              <div class="tile-art" style="background-image:url('resources/qazacatism-cover copy.png');background-size:cover;background-position:center"></div>
               <h3>Qazacatism</h3>
               <p class="tile-meta">Card Game • 7min</p>
             </article>
