--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
 
         <!-- Cards / clickable links -->
-        <div class="hero-right" aria-hidden="true">
+        <div class="hero-right" aria-hidden="false">
           <div class="cards" id="cards">
             <!-- Ensnapifacation card uses resources/Back.png as requested -->
             <a class="card-link" href="#game-ensnapifacation" title="Ensnapifacation — details">
