--- a/index.html
+++ b/index.html
@@ -293,7 +293,39 @@
       <div class="detail-inner">
         <h2 id="ensnap-hed" class="detail-hed">Ensnapifacation</h2>
         <p class="detail-copy">
-          (Longer details) This paragraph can be as long as you like — the yellow background will now stay consistent and readable. Because you asked, the text in this Ensnapifacation section is black for better contrast on the bright yellow background.
+Someone’s close.
+          <br>
+Everyone notices.
+          <br>
+Everything goes wrong.
+          <br> <br>
+QAZACATISM is a chaotic card game where winning paints a target on your back.
+Cancel, reverse, interrupt, and survive long enough to finish your setup.
+          <br> <br>
+If it feels unfair, it probably is.
+          <br> <br> <br>
+30 SECOND TEACH — QAZACATISM
+         <br> <br> 
+GOAL
+          <br>
+Be the first player to activate the Super Qaz by having both Super Qaz and Super Fish. When that happens, you win instantly.
+          <br> <br>
+TURN
+          <br>
+On your turn, you may play up to 3 actions. When you’re done, draw back up to 7 cards. If you ever run out of cards, draw 7 new ones.
+<br> <br>
+          CARDS
+          <br>
+Most cards mess with hands, steal information, reshuffle the game, or knock players out. Some cards activate immediately when drawn. Hunters are dangerous — unless you’re saved by a Qaz. Super cards ignore most rules.
+<br> <br>
+          INTERRUPTS
+          <br>
+Cards can cancel other cards. Some effects override everything else. If cards clash, read them out loud, argue briefly, decide what makes sense, and keep going.
+<br> <br>
+          WIN
+          <br>
+The moment you have Super Qaz and Super Fish together, the Super Qaz activates — game over.
+
         </p>
         <p><a href="#games" class="btn ghost">Back to games</a></p>
       </div>
